--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -14,11 +14,12 @@
 }
 
 body {
-  background-color: rgb(62, 62, 62);
+  background-color: rgb(43, 43, 43);
 }
 
 .main-content {
-  background-color: white;
+  border-radius: 3px;
+  background-color: rgb(204, 204, 204);
   text-align: center;
   margin: 4rem auto;
   padding: 4rem;
@@ -40,8 +41,9 @@ body {
 }
 
 .scrape-button {
-  border: 1rem solid rgb(62, 62, 62);
-  background-color: rgb(62, 62, 62);
+  border-radius: 5px;
+  border: 1rem solid black;
+  background-color: black;
   color: white;
   font-weight: bolder;
 }
@@ -59,8 +61,9 @@ body {
 }
 
 .clear-data-button {
-  border: 1rem solid rgb(62, 62, 62);
-  background-color: rgb(62, 62, 62);
+  border-radius: 5px;
+  border: 1rem solid black;
+  background-color: black;
   color: white;
   font-weight: bolder
 }
@@ -78,7 +81,8 @@ body {
 }
 
 .projects-container {
-  background-color: white;
+  border-radius: 3px;
+  background-color: rgb(204, 204, 204);
   text-align: center;
   margin: 4rem auto;
   padding: 4rem;
